--- a/Hamburguesa/Base.lproj/Main.storyboard
+++ b/Hamburguesa/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Hamburguesa" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,94 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ERJ-Ko-LLd">
+                                <rect key="frame" x="180" y="20" width="240" height="188"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="2G7-YM-tSO"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="País" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BeO-Ef-BUZ">
+                                <rect key="frame" x="279" y="230" width="42" height="21"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="jYV-a8-2rl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¿Qué país?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A39-pu-7lI">
+                                <rect key="frame" x="218" y="259" width="164" height="40"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="164" id="VhV-hM-236"/>
+                                    <constraint firstAttribute="height" constant="40" id="yBQ-Nn-vXl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¿Qué hamburguesa?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wEg-ph-Ir3">
+                                <rect key="frame" x="177" y="391" width="246" height="40"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Yqq-DD-S27"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4M0-aj-QB2">
+                                <rect key="frame" x="177" y="463" width="238" height="30"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                <color key="tintColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Quiero una hamburguesa!"/>
+                                <connections>
+                                    <action selector="quieroUnaHamburguesa:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8hq-oz-dal"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hamburguesa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQi-aF-GoX">
+                                <rect key="frame" x="235" y="349" width="130" height="21"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="mV1-iC-MuM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="A39-pu-7lI" firstAttribute="centerX" secondItem="ERJ-Ko-LLd" secondAttribute="centerX" id="0VG-MV-PC0"/>
+                            <constraint firstItem="BeO-Ef-BUZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="230" id="1FF-NS-rP2"/>
+                            <constraint firstItem="BeO-Ef-BUZ" firstAttribute="top" secondItem="ERJ-Ko-LLd" secondAttribute="bottom" constant="22" id="F3q-pT-dfM"/>
+                            <constraint firstItem="ERJ-Ko-LLd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="KYm-uz-Bjg"/>
+                            <constraint firstItem="4M0-aj-QB2" firstAttribute="top" secondItem="wEg-ph-Ir3" secondAttribute="bottom" constant="32" id="MIX-k5-nJ5"/>
+                            <constraint firstItem="wEg-ph-Ir3" firstAttribute="top" secondItem="bQi-aF-GoX" secondAttribute="bottom" constant="21" id="SXq-vZ-I3E"/>
+                            <constraint firstItem="wEg-ph-Ir3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TT4-cQ-sW5"/>
+                            <constraint firstItem="wEg-ph-Ir3" firstAttribute="centerX" secondItem="ERJ-Ko-LLd" secondAttribute="centerX" id="Zex-Ie-XTQ"/>
+                            <constraint firstItem="4M0-aj-QB2" firstAttribute="leading" secondItem="wEg-ph-Ir3" secondAttribute="leading" id="Zro-rc-ccm"/>
+                            <constraint firstItem="4M0-aj-QB2" firstAttribute="centerX" secondItem="ERJ-Ko-LLd" secondAttribute="centerX" constant="-4" id="dF4-0X-hJM"/>
+                            <constraint firstItem="BeO-Ef-BUZ" firstAttribute="centerX" secondItem="bQi-aF-GoX" secondAttribute="centerX" id="g5i-tC-Uh4"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4M0-aj-QB2" secondAttribute="bottom" constant="107" id="m5k-d3-iWR"/>
+                            <constraint firstItem="A39-pu-7lI" firstAttribute="top" secondItem="BeO-Ef-BUZ" secondAttribute="bottom" constant="8" symbolic="YES" id="o4W-EW-LrC"/>
+                            <constraint firstItem="BeO-Ef-BUZ" firstAttribute="centerX" secondItem="ERJ-Ko-LLd" secondAttribute="centerX" id="upk-nz-LR5"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="hamburguesa" destination="wEg-ph-Ir3" id="5Li-IS-KC5"/>
+                        <outlet property="imagenHamburguesa" destination="ERJ-Ko-LLd" id="2rU-04-gWT"/>
+                        <outlet property="pais" destination="A39-pu-7lI" id="HAL-kJ-tGm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="440" y="429"/>
         </scene>
     </scenes>
 </document>
